feat(header): implement header with navigation

--- a/index.html
+++ b/index.html
@@ -11,13 +11,39 @@
 <body>
 <header class="header">
     <nav class="nav">
+        <div class="nav__container">
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a href="#discover" class="nav__link">Discover LifeBlend</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#explore" class="nav__link">Explore</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#inspiration" class="nav__link">Inspiration</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#contact_us" class="nav__link">Contact us</a>
+                </li>
+            </ul>
 
+            <div class="nav__actions">
+                <button class="btn btn--secondary">Contact us</button>
+            </div>
+        </div>
     </nav>
 </header>
 
 <main class="main">
     <section class="articles">
-        <a class='article__title'></a>
+        <div class='article__container'>
+            <img src='images/articles/hero_yoga.png' alt='yoga'>
+            <a class='article__title'></a>
+        </div>
+
+        <div class='article__container' id='discover'>
+            <a class='article__title'></a>
+        </div>
     </section>
 
     <section class="contacts">
