feat(hero): add hero section

--- a/index.html
+++ b/index.html
@@ -35,10 +35,29 @@
 </header>
 
 <main class="main">
+    <section class='hero'>
+        <img src='images/articles/hero_yoga.png' alt='yoga' class="hero__image">
+
+        <div class='hero__container'>
+            <div class='hero__title'>
+                <a class='title'>Stay tuned,<br/>stay healthy</a>
+            </div>
+            <div class='hero__content'>
+                <div>
+                    <p>Experience a comprehensive blend of content and resources<br/>to enhance and inspire every facet of your lifestyle.</p>
+                </div>
+
+                <div class='hero__btn'>
+                    <button class='btn btn--secondary'>Explore</button>
+                    <button class='btn btn--primary'>Sign Up</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="articles">
-        <div class='article__container'>
-            <img src='images/articles/hero_yoga.png' alt='yoga'>
-            <a class='article__title'></a>
+        <div class='article__container' id='revolutionize'>
+
         </div>
 
         <div class='article__container' id='discover'>
@@ -46,7 +65,7 @@
         </div>
     </section>
 
-    <section class="contacts">
+    <section class="connect">
 
     </section>
 </main>
