fix(spacing): implement pixel perfect spacing for header and hero sections

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
     <title>Lifestyle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,57 +11,55 @@
 <body>
 <header class="header">
     <nav class="nav">
-        <div class="nav__container">
-            <ul class="nav__list">
-                <li class="nav__item">
-                    <a href="#discover" class="nav__link">Discover LifeBlend</a>
-                </li>
-                <li class="nav__item">
-                    <a href="#explore" class="nav__link">Explore</a>
-                </li>
-                <li class="nav__item">
-                    <a href="#inspiration" class="nav__link">Inspiration</a>
-                </li>
-                <li class="nav__item">
-                    <a href="#contact_us" class="nav__link">Contact us</a>
-                </li>
-            </ul>
-
-            <div class="nav__actions">
-                <button class="btn btn--secondary">Contact us</button>
-            </div>
-        </div>
+        <ul class="nav__list">
+            <li class="nav__item">
+                <a href="#discover" class="nav__link">Discover LifeBlend</a>
+            </li>
+            <li class="nav__item">
+                <a href="#explore" class="nav__link">Explore</a>
+            </li>
+            <li class="nav__item">
+                <a href="#inspiration" class="nav__link">Inspiration</a>
+            </li>
+            <li class="nav__item">
+                <a href="#contact_us" class="nav__link">Contact us</a>
+            </li>
+        </ul>
     </nav>
+    <div class="nav__actions">
+        <button class="btn btn--secondary">Contact us</button>
+    </div>
 </header>
 
 <main class="main">
-    <section class='hero'>
-        <img src='images/articles/hero_yoga.png' alt='yoga' class="hero__image">
+    <section class="hero">
+        <img src="images/articles/hero_yoga.png" alt="yoga" class="hero__image">
 
-        <div class='hero__container'>
-            <div class='hero__title'>
-                <a class='title'>Stay tuned,<br/>stay healthy</a>
+        <div class="hero__container">
+            <div class="hero__title">
+                <a class="title">Stay tuned,<br/>stay healthy</a>
             </div>
-            <div class='hero__content'>
+            <div class="hero__content">
                 <div>
-                    <p>Experience a comprehensive blend of content and resources<br/>to enhance and inspire every facet of your lifestyle.</p>
+                    <p>Experience a comprehensive blend of content and resources<br/>to enhance and inspire every facet
+                        of your lifestyle.</p>
                 </div>
 
-                <div class='hero__btn'>
-                    <button class='btn btn--secondary'>Explore</button>
-                    <button class='btn btn--primary'>Sign Up</button>
+                <div class="hero__btn">
+                    <button class="btn btn--secondary">Explore</button>
+                    <button class="btn btn--primary">Sign Up</button>
                 </div>
             </div>
         </div>
     </section>
 
     <section class="articles">
-        <div class='article__container' id='revolutionize'>
+        <div class="article__container" id="revolutionize">
 
         </div>
 
-        <div class='article__container' id='discover'>
-            <a class='article__title'></a>
+        <div class="article__container" id="discover">
+            <a class="article__title"></a>
         </div>
     </section>
 
