feat(revolutionize): add revolutionize section and fix buttons style

--- a/index.html
+++ b/index.html
@@ -54,8 +54,33 @@
     </section>
 
     <section class="articles">
-        <div class="article__container" id="revolutionize">
+        <div class="article__container background__grey" id="revolutionize">
+            <div class="article__revolutionize">
+                <a class="article__name">Revolutionize</a>
+                <a class="title">Discover a New Way of Living</a>
+                <p>LifeBlend Hub offers a unique and comprehensive approach to modern living. With a curated blend of
+                    content and resources, we aim to enhance and inspire every facet of your lifestyle.</p>
 
+                <div class="revolutionize__blocks">
+                    <div class="revolutionize__block">
+                        <a class="subtitle">Explore More</a>
+                        <p>Unlock your potential with our diverse range of articles, guides, and tools.</p>
+                    </div>
+
+                    <div class="revolutionize__block">
+                        <a class="subtitle">Get Inspired</a>
+                        <p>Discover stories of transformation and success from our vibrant community.</p>
+                    </div>
+                </div>
+
+                <div class="revolutionize__buttons">
+                    <button class="btn btn--primary">Learn more</button>
+                    <button class="btn">Sign Up</button>
+                    <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
+                </div>
+            </div>
+
+            <img class="img__revolutionize" src="images/articles/revolutionize_section.png" height="601" width="601" alt="tennis"/>
         </div>
 
         <div class="article__container" id="discover">
