feat(discover): add first discover section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,44 @@
         </div>
 
         <div class="article__container" id="discover">
-            <a class="article__title"></a>
+            <div class="article__discover1">
+                <div class="discover1__text">
+                    <a class="article__name">Discover</a>
+                    <a class="title">Unlock the Power of LifeBlend Hub</a>
+                    <p>LifeBlend Hub is your one-stop destination for all things related to health, productivity, leisure,
+                        and personal growth. Explore our comprehensive blend of content and resources to enhance and inspire
+                        every facet of your lifestyle.</p>
+                </div>
+
+                <div class="discover1__blocks">
+                    <div class="discover1__block">
+                        <img src="images/articles/discover1_health_and_wellness.png" height="222" width="395"
+                             alt="picture of running field"/>
+                        <a class="subtitle">Health and Wellness</a>
+                        <p>Discover expert advice and tips on maintaining a healthy lifestyle.</p>
+                    </div>
+
+                    <div class="discover1__block">
+                        <img src="images/articles/discover1_boost_your_productivity.png" height="222" width="395"
+                             alt="picture of basketball"/>
+                        <a class="subtitle">Boost Your Productivity</a>
+                        <p>Learn effective strategies to maximize your productivity and achieve your goals.</p>
+                    </div>
+
+                    <div class="discover1__block">
+                        <img src="images/articles/discover1_find_joy_in_leisure.png" height="222" width="395"
+                             alt="floor of basketball"/>
+                        <a class="subtitle">Find Joy in Leisure</a>
+                        <p>Discover exciting activities and hobbies to make the most of your leisure time.</p>
+                    </div>
+                </div>
+
+                <div class="discover1__buttons">
+                    <button class="btn btn--primary">Join</button>
+                    <button class="btn">Learn more</button>
+                    <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
+                </div>
+            </div>
         </div>
     </section>
 
