fix(buttons): optimize buttons style

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
 
-                <div class="revolutionize__buttons">
+                <div class="article__buttons">
                     <button class="btn btn--primary">Learn more</button>
                     <button class="btn">Sign Up</button>
                     <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
 
-                <div class="discover1__buttons">
+                <div class="article__buttons">
                     <button class="btn btn--primary">Join</button>
                     <button class="btn">Learn more</button>
                     <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
