--- a/index.html
+++ b/index.html
@@ -215,35 +215,54 @@
         </article>
     </section>
 
-    <section class="subscribe">
-        <h2></h2>
-        <p></p>
-        <form>
-            <input>
-            <button></button>
+    <section class="articles__item subscribe">
+        <h2 class="title">Get the Latest LifeBlend Updates</h2>
+        <p>Subscribe to our newsletter for regular updates on lifestyle trends and tips.</p>
+        <form class="subscribe__form">
+            <input type="email" name="user_email" placeholder="Enter your email">
+            <button class="btn btn--secondary">Sign in</button>
         </form>
-        <span></span>
+        <small class="terms">By clicking Sign Up, you agree to our Terms and Conditions.</small>
     </section>
 
-    <section class="connect" id="contact_us">
-        <span></span>
-        <h2></h2>
-        <p></p>
-        <div>
-            <img src="">
-            <h3></h3>
+    <section class="articles__item" id="contact_us">
+        <div class="contact__blocks">
+            <span class="article__name">Connect</span>
+            <h2 class="title">Contact LifeBlend</h2>
+            <p>Have a question or need assistance? We're here to help!</p>
+
+            <div class="contact__block">
+                <img src="images/icons/Mail.png" height="32" width="32" alt="mail"/>
+                <h3 class="contact__description">Email</h3>
+                <span>Send us an email</span>
+                <a href="mailto:hello@lifeblendhub.com">hello@lifeblendhub.com</a>
+            </div>
+
+            <div class="contact__block">
+                <img src="images/icons/Phone.png" height="32" width="32" alt="phone"/>
+                <h3 class="contact__description">Phone</h3>
+                <span>Give us a call</span>
+                <a href="tel:+1-555-123-4567">+1 (555) 123-4567</a>
+            </div>
+
+            <div class="contact__block">
+                <img src="images/icons/Geo.png" height="32" width="32" alt="geo position"/>
+                <h3 class="contact__description">Office</h3>
+                <span>123 Main St, Anytown, USA</span>
+            </div>
+
+            <div class="contact__actions">
+                <button class="btn">Get Directions</button>
+                <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
+            </div>
         </div>
 
-        <div class="article__actions">
-            <button class="btn">Get Directions</button>
-            <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
-        </div>
+        <img src="images/articles/connect_tennis.png" height="442" width="601" alt="tennis"/>
     </section>
 </main>
 
 <footer class="footer">
 
 </footer>
-
 </body>
 </html>
