fix(sections): optimize revolutionize and discover 2 sections pixel perfect

--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
     <section class="articles">
         <article class="articles__item" id="revolutionize">
             <div class="article__revolutionize">
-                <span class="article__name">Revolutionize</span>
-                <h2 class="title">Discover a New Way of Living</h2>
-                <p class="article__description">LifeBlend Hub offers a unique and comprehensive approach to modern
-                    living. With a curated blend of
-                    content and resources, we aim to enhance and inspire every facet of your lifestyle.</p>
-
+                <div class="revolutionize__text">
+                    <span class="article__name">Revolutionize</span>
+                    <h2 class="title">Discover a New Way of Living</h2>
+                    <p class="article__description">LifeBlend Hub offers a unique and comprehensive approach to modern
+                        living. With a curated blend of
+                        content and resources, we aim to enhance and inspire every facet of your lifestyle.</p>
+                </div>
                 <div class="revolutionize__blocks">
                     <div class="revolutionize__block">
                         <h3 class="subtitle">Explore More</h3>
@@ -129,13 +130,15 @@
             </div>
         </article>
 
-        <article class="articles__item article__discover2">
-            <div class="discover2__text">
-                <span class="article__name">Discover</span>
-                <h2 class="title">Unlock the Secrets to a Balanced Lifestyle</h2>
-                <p>LifeBlend Hub provides a comprehensive blend of content and resources to help you achieve
-                    balance in every aspect of your life. From wellness tips and personal development strategies
-                    to home organization hacks and travel inspiration, we've got you covered.</p>
+        <article class="articles__item">
+            <div class="article__discover2">
+                <div class="discover2__text">
+                    <span class="article__name">Discover</span>
+                    <h2 class="title">Unlock the Secrets to a Balanced Lifestyle</h2>
+                    <p>LifeBlend Hub provides a comprehensive blend of content and resources to help you achieve
+                        balance in every aspect of your life. From wellness tips and personal development strategies
+                        to home organization hacks and travel inspiration, we've got you covered.</p>
+                </div>
 
                 <div class="article__actions">
                     <button class="btn btn--primary">Learn more</button>
@@ -144,7 +147,7 @@
                 </div>
             </div>
 
-            <img src="images/articles/discover2_bicycle.png" height="601" width="601" alt="bicycle"/>
+            <img class="img__discover2" src="images/articles/discover2_bicycle.png" height="601" width="601" alt="bicycle"/>
         </article>
 
         <article class="articles__item article__discover3" id="explore">
