feat(discover 3): add discover 3 section styles

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </article>
 
         <article class="articles__item article__discover3" id="explore">
-            <h2 class="title">Discover a World of Inspiration and Resources on LifeBlend Hub</h2>
+            <h2 class="title discover3__text">Discover a World of Inspiration and<br/> Resources on LifeBlend Hub</h2>
 
             <div class="discover3__blocks">
                 <div class="discover3__block">
