feat(inspiration): add statistics section styles and optimize articles styles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="hero__content">
                 <p>Experience a comprehensive blend of content and resources<br/>to enhance and inspire every facet of your lifestyle.</p>
 
-                <div class="hero__actions">
+                <div class="actions">
                     <button class="btn btn--secondary">Explore</button>
                     <button class="btn btn--primary">Sign Up</button>
                 </div>
@@ -51,8 +51,8 @@
 
     <section class="articles">
         <article class="articles__item" id="revolutionize">
-            <div class="article__revolutionize">
-                <div class="revolutionize__text">
+            <div class="article__content">
+                <div class="article__text">
                     <span class="article__name">Revolutionize</span>
                     <h2 class="title">Discover a New Way of Living</h2>
                     <p class="article__description">LifeBlend Hub offers a unique and comprehensive approach to modern
@@ -73,7 +73,7 @@
                     </div>
                 </div>
 
-                <div class="article__actions">
+                <div class="actions">
                     <button class="btn btn--primary">Learn more</button>
                     <button class="btn">Sign Up</button>
                     <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
@@ -84,17 +84,16 @@
                  alt="tennis"/>
         </article>
 
-        <article class="articles__item" id="discover">
-            <div class="article__discover1">
-                <div class="discover1__text">
-                    <span class="article__name">Discover</span>
-                    <h2 class="title">Unlock the Power of LifeBlend Hub</h2>
-                    <p>LifeBlend Hub is your one-stop destination for all things related to health, productivity,
-                        leisure,
-                        and personal growth. Explore our comprehensive blend of content and resources to enhance and
-                        inspire
-                        every facet of your lifestyle.</p>
-                </div>
+        <article class="articles__item article__discover1" id="discover">
+            <div class="discover1__text">
+                <span class="article__name">Discover</span>
+                <h2 class="title">Unlock the Power of LifeBlend Hub</h2>
+                <p>LifeBlend Hub is your one-stop destination for all things related to health, productivity,
+                    leisure,
+                    and personal growth. Explore our comprehensive blend of content and resources to enhance and
+                    inspire
+                    every facet of your lifestyle.</p>
+            </div>
 
                 <div class="discover1__blocks">
                     <div class="discover1__block">
@@ -122,16 +121,15 @@
                     </div>
                 </div>
 
-                <div class="article__actions">
-                    <button class="btn btn--primary">Join</button>
-                    <button class="btn">Learn more</button>
-                    <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
-                </div>
+            <div class="actions">
+                <button class="btn btn--primary">Join</button>
+                <button class="btn">Learn more</button>
+                <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
             </div>
         </article>
 
         <article class="articles__item">
-            <div class="article__discover2">
+            <div class="article__content">
                 <div class="discover2__text">
                     <span class="article__name">Discover</span>
                     <h2 class="title">Unlock the Secrets to a Balanced Lifestyle</h2>
@@ -140,7 +138,7 @@
                         to home organization hacks and travel inspiration, we've got you covered.</p>
                 </div>
 
-                <div class="article__actions">
+                <div class="actions">
                     <button class="btn btn--primary">Learn more</button>
                     <button class="btn">Sign Up</button>
                     <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
@@ -159,7 +157,7 @@
                     <h3 class="subtitle">Unlock Your Full Potential with LifeBlend Hub's Comprehensive Content</h3>
                     <p class="block__description">Engage with our curated content and resources to enhance every aspect of your lifestyle.</p>
 
-                    <div class="article__actions">
+                    <div class="actions">
                         <button class="btn">Explore</button>
                         <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
                     </div>
@@ -170,7 +168,7 @@
                     <h3 class="subtitle">Stay Informed and Inspired with LifeBlend Hub's Diverse Content Content</h3>
                     <p class="block__description">Access our extensive collection of articles, videos, and guides to enrich your daily life.</p>
 
-                    <div class="article__actions">
+                    <div class="actions">
                         <button class="btn">Discover</button>
                         <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
                     </div>
@@ -181,7 +179,7 @@
                     <h3 class="subtitle">Transform Your Lifestyle with LifeBlend Hub's Expertly Curated Resources</h3>
                     <p class="block__description">Find the tools and resources you need to achieve your goals and live your best life.</p>
 
-                    <div class="article__actions">
+                    <div class="actions">
                         <button class="btn">Get Started</button>
                         <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
                     </div>
@@ -191,23 +189,25 @@
 
         <article class="articles__item" id="inspiration">
             <div class="stats__content">
-                <h2 class="title">Discover the Impact of LifeBlend Hub with These Fascinating Statistics</h2>
-                <p>LifeBlend Hub has reached millions of users worldwide, providing valuable resources and
-                    inspiring content to enhance their modern lifestyles.</p>
+                <div class="stats__text">
+                    <h2 class="title">Discover the Impact of LifeBlend Hub with These Fascinating Statistics</h2>
+                    <p>LifeBlend Hub has reached millions of users worldwide, providing valuable resources and
+                        inspiring content to enhance their modern lifestyles.</p>
+                </div>
 
                 <div class="stats__blocks">
-                    <div>
-                        <span class="title">50%</span>
+                    <div class="stats__block">
+                        <span class="subtitle stats__percent">50%</span>
                         <p class="block__description">Users report improved well-being and satisfaction with LifeBlend Hub.</p>
                     </div>
 
-                    <div>
-                        <span class="title">50%</span>
+                    <div class="stats__block">
+                        <span class="subtitle stats__percent">50%</span>
                         <p class="block__description">LifeBlend Hub has become an essential part of users' lives.</p>
                     </div>
                 </div>
 
-                <div class="article__actions">
+                <div class="actions">
                     <button class="btn btn--primary">Learn more</button>
                     <button class="btn">Sign Up</button>
                     <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
@@ -254,7 +254,7 @@
                 <span>123 Main St, Anytown, USA</span>
             </div>
 
-            <div class="contact__actions">
+            <div class="actions">
                 <button class="btn">Get Directions</button>
                 <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
             </div>
