--- a/index.html
+++ b/index.html
@@ -95,31 +95,31 @@
                     every facet of your lifestyle.</p>
             </div>
 
-                <div class="discover1__blocks">
-                    <div class="discover1__block">
-                        <img src="images/articles/discover1_health_and_wellness.png" height="222" width="395"
-                             alt="picture of running field"/>
-                        <h3 class="subtitle">Health and Wellness</h3>
-                        <p class="block__description">Discover expert advice and tips on maintaining a healthy
-                            lifestyle.</p>
-                    </div>
-
-                    <div class="discover1__block">
-                        <img src="images/articles/discover1_boost_your_productivity.png" height="222" width="395"
-                             alt="picture of basketball"/>
-                        <h3 class="subtitle">Boost Your Productivity</h3>
-                        <p class="block__description">Learn effective strategies to maximize your productivity and
-                            achieve your goals.</p>
-                    </div>
-
-                    <div class="discover1__block">
-                        <img src="images/articles/discover1_find_joy_in_leisure.png" height="222" width="395"
-                             alt="floor of basketball"/>
-                        <h3 class="subtitle">Find Joy in Leisure</h3>
-                        <p class="block__description">Discover exciting activities and hobbies to make the most of your
-                            leisure time.</p>
-                    </div>
+            <div class="discover1__blocks">
+                <div class="discover1__block">
+                    <img src="images/articles/discover1_health_and_wellness.png" height="222" width="395"
+                         alt="picture of running field"/>
+                    <h3 class="subtitle">Health and Wellness</h3>
+                    <p class="block__description">Discover expert advice and tips on maintaining a healthy
+                        lifestyle.</p>
                 </div>
+
+                <div class="discover1__block">
+                    <img src="images/articles/discover1_boost_your_productivity.png" height="222" width="395"
+                         alt="picture of basketball"/>
+                    <h3 class="subtitle">Boost Your Productivity</h3>
+                    <p class="block__description">Learn effective strategies to maximize your productivity and
+                        achieve your goals.</p>
+                </div>
+
+                <div class="discover1__block">
+                    <img src="images/articles/discover1_find_joy_in_leisure.png" height="222" width="395"
+                         alt="floor of basketball"/>
+                    <h3 class="subtitle">Find Joy in Leisure</h3>
+                    <p class="block__description">Discover exciting activities and hobbies to make the most of your
+                        leisure time.</p>
+                </div>
+            </div>
 
             <div class="actions">
                 <button class="btn btn--primary">Join</button>
@@ -218,14 +218,20 @@
         </article>
     </section>
 
-    <section class="articles__item subscribe">
-        <h2 class="title">Get the Latest LifeBlend Updates</h2>
-        <p>Subscribe to our newsletter for regular updates on lifestyle trends and tips.</p>
-        <form class="subscribe__form">
-            <input type="email" name="user_email" placeholder="Enter your email">
-            <button class="btn btn--secondary">Sign in</button>
-        </form>
-        <small class="terms">By clicking Sign Up, you agree to our Terms and Conditions.</small>
+    <section class="subscribe">
+        <div class="subscribe__text">
+            <h2 class="title">Get the Latest LifeBlend Updates</h2>
+            <p>Subscribe to our newsletter for regular updates on lifestyle trends and tips.</p>
+        </div>
+
+        <div class="subscribe__input">
+            <form class="subscribe__form">
+                <input class="input" type="email" name="user_email" placeholder="Enter your email">
+                <button class="btn btn--secondary">Sign in</button>
+            </form>
+
+            <small class="terms">By clicking Sign Up, you agree to our Terms and Conditions.</small>
+        </div>
     </section>
 
     <section class="articles__item" id="contact_us">
